@@ -1255,20 +1255,22 @@
                         <xref ref="theorem-KILT" acro="KILT"/></mrow>
                 </md>.  Since <m>T</m> has a trivial kernel, by <xref ref="theorem-KILT" acro="KILT"/>, <m>T</m> is injective.  Also,<md>
                     <mrow>\rank{T}
-                    &amp;=\dimension{U}-\nullity{T}&amp;&amp;
+                    &amp;=\rank{T} + \nullity{T} - \nullity{T}&amp;&amp;
+                        <xref ref="property-ZCN" acro="ZCN"/></mrow>
+                    <mrow>&amp;=\dimension{U}-\nullity{T}&amp;&amp;
                         <xref ref="theorem-RPNDD" acro="RPNDD"/></mrow>
                     <mrow>&amp;=\dimension{U}-0&amp;&amp;
                         <xref ref="theorem-NOILT" acro="NOILT"/></mrow>
                     <mrow>&amp;=\dimension{V}
                         &amp;&amp;\text{Hypothesis}</mrow>
                 </md>.  Since <m>\rng{T}\subseteq V</m>, <xref ref="theorem-EDYES" acro="EDYES"/> gives <m>\rng{T}=V</m>, so by <xref ref="theorem-RSLT" acro="RSLT"/>, <m>T</m> is surjective.  Finally, by <xref ref="theorem-ILTIS" acro="ILTIS"/>, <m>T</m> is invertible.</p>
-                <p>Since <m>\compose{S}{T}</m> is invertible, by <xref ref="theorem-ILTIS" acro="ILTIS"/> <m>\compose{S}{T}</m> is surjective and therefore has a full range by <xref ref="theorem-RSLT" acro="RSLT"/>.  Then<md>
+                <p>Since <m>\compose{S}{T}</m> is invertible, by <xref ref="theorem-ILTIS" acro="ILTIS"/> <m>\compose{S}{T}</m> is surjective and therefore has a full range by <xref ref="theorem-RSLT" acro="RSLT"/>.  In other words, <m>\rng{\compose{S}{T}}=W</m>. Then<md>
                     <mrow>W
                     &amp;=\rng{\compose{S}{T}}&amp;&amp;
                         <xref ref="theorem-RSLT" acro="RSLT"/></mrow>
                     <mrow>&amp;\subseteq\rng{S}&amp;&amp;
                         <xref ref="exercise-SLT-T15" acro="SLT.T15"/></mrow>
-                </md>.  Since <m>\rng{S}\subseteq W</m> we have <m>\rng{S}=W</m> and by <xref ref="theorem-RSLT" acro="RSLT"/>, <m>S</m> is surjective.  By an application of <xref ref="theorem-RPNDD" acro="RPNDD"/> similar to the first part of this solution, we see that <m>S</m> has a trivial kernel, is therefore injective (<xref ref="theorem-KILT" acro="KILT"/>), and thus invertible (<xref ref="theorem-ILTIS" acro="ILTIS"/>).</p>
+                </md>.  Since it is always the case that <m>\rng{S}\subseteq W</m>, we have <m>\rng{S}=W</m> by <xref ref="definition-SE" acro="SE"/>.  Thus, by <xref ref="theorem-RSLT" acro="RSLT"/>, <m>S</m> is surjective.  By an application of <xref ref="theorem-RPNDD" acro="RPNDD"/> similar to the first part of this solution, we see that <m>S</m> has a trivial kernel, so is therefore injective (<xref ref="theorem-KILT" acro="KILT"/>), and thus is invertible (<xref ref="theorem-ILTIS" acro="ILTIS"/>).</p>
             </solution>
         </exercise>
     </exercises>
