@@ -17,6 +17,7 @@ Edit: Structure five solutions as "iff" proofs (Mira Schoeberlein)
 Edit: Simplify Solution ILT.T10
 Edit: Definition CM, improve matrix display (Carissa Riedesel)
 Edit: Clean-up Exercise VS.M13 (Jasmine Mikesell)
+Edit: Expand Solution IVLT.T40
 Change: Streamline second half of the proof of Theorem BS
 Change: Exercise VO.T30, define subtraction more carefully (Ken Price)
 Change: Theorems SSNS, BNS need case when n = r (Ken Price)
